# Learning-OpenGL

./: CMakeLists.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/.cache/clangd/index/: _fixes.hpp.10C801C8D503FBAA.idx  _vectorize.hpp.C9C362C0B1D8E534.idx  common.hpp.A32D703ABDC1C25F.idx  compute_common.hpp.44F2626D0AC31888.idx  compute_vector_relational.hpp.3DD4F5927ED4E65C.idx  constants.hpp.CC001D24050A061B.idx  constants.inl.DB13B92D5687D84F.idx  context.c.B010D40228ADFFDB.idx  egl_context.c.548AE464D2DF3D1C.idx  epsilon.hpp.F96345C65D2AE81D.idx  epsilon.inl.7871506627EEB58E.idx  exponential.hpp.D52F49FB7EB0FA19.idx  func_common.inl.824AE0991F6C928F.idx  func_exponential.inl.B30ECA07E7B72F5B.idx  func_geometric.inl.D239D68ACD5E969D.idx  func_integer.inl.262B029782DEBEFC.idx  func_matrix.inl.77ACFC42C62B876E.idx  func_packing.inl.44025399FE28353E.idx  func_trigonometric.inl.2B55A0A93FF5B4AA.idx  func_vector_relational.inl.ED4E4C863164A138.idx  fwd.hpp.1B43B5FC05A7733E.idx  geometric.hpp.07A436F3E52464A7.idx  gl.c.E699A0FE35A11B05.idx  gl.h.524819F2526F9770.idx  glad.c.36779AE02492F43F.idx  (+197 more)
cmake/glfw-3.4/: Makefile  cmake_install.cmake
cmake/glfw-3.4/src/: Makefile  cmake_install.cmake
glfw-3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
glfw-3.4/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
lib/: shaders.h
lib/glad/src/: glad.c
src/: main.cpp  shader.frag.glsl  shader.vert.glsl
(+1 files in other folders)
